load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["embed_test.go"],
    data = [
        "BUILD.bazel",
        "//:AUTHORS",
        "@io_bazel_rules_go_repository_tools//:BUILD.bazel",
    ],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        ":empty",
        ":ext",
        ":flat",
        ":local",
        ":single",
        ":str",
    ],
)

go_embed_data(
    name = "empty",
    package = "go_embed_data",
    var = "empty",
)

go_embed_data(
    name = "single",
    src = "//:AUTHORS",
    package = "go_embed_data",
    var = "single",
)

go_embed_data(
    name = "local",
    srcs = [
        ":BUILD.bazel",
        "@io_bazel_rules_go//:AUTHORS",
    ],
    package = "go_embed_data",
    var = "local",
)

go_embed_data(
    name = "ext",
    srcs = ["@io_bazel_rules_go_repository_tools//:BUILD.bazel"],
    package = "go_embed_data",
    var = "ext",
)

go_embed_data(
    name = "flat",
    srcs = [":BUILD.bazel"],
    flatten = True,
    package = "go_embed_data",
    var = "flat",
)

go_embed_data(
    name = "str",
    srcs = [":BUILD.bazel"],
    package = "go_embed_data",
    string = True,
    var = "str",
)
