load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "a_proto",
    srcs = ["a.proto"],
    deps = [
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "b_proto",
    srcs = ["b.proto"],
    deps = [
        ":a_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

go_proto_library(
    name = "a_go_proto",
    importpath = "github.com/bazelbuild/rules_go/test/proto_ignore_go_package_option/a",
    proto = ":a_proto",
    deps = [
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
    ],
)

go_proto_library(
    name = "b_go_proto",
    importpath = "github.com/bazelbuild/rules_go/test/proto_ignore_go_package_option/b",
    proto = ":b_proto",
    deps = [
        ":a_go_proto",
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
    ],
)
