load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "go_binary")

go_library(
    name = "go_default_library",
    srcs = ["race.go"],
    deps = ["//tests/race/racy:go_default_library"],
)

go_binary(
    name = "race",
    srcs = ["race_main.go"],
    deps = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["race_test.go"],
    library = ":go_default_library",
    tags = ["manual"],
)
