load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "go_binary")
load("@io_bazel_rules_go//tests:bazel_tests.bzl", "bazel_test")

go_library(
    name = "go_default_library",
    srcs = ["race.go"],
    deps = ["//tests/race/racy:go_default_library"],
)

go_binary(
    name = "race_main",
    srcs = ["race_main.go"],
    deps = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["race_test.go"],
    library = ":go_default_library",
    tags = ["manual"],
)

bazel_test(
    name = "race",
    args = ["--features=race"],
    check = """
if [ "$result" -eq 0 ]; then
  echo "error: test succeeded unexpectedly" >&2
  result=1
else
  result=0
fi
""",
    command = "test",
    targets = [":go_default_test"],
)