load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "useful_proto",
    srcs = ["useful.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    proto = ":useful_proto",
    deps = [
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
