load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_library",
    srcs = ["embed.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_proto_library",
    proto = ":proto_library",
    deps = [
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
    ],
    # Note that if you forget the importpath everything will break horribly.
    importpath = "github.com/bazelbuild/rules_go/examples/proto/embed",
)

go_library(
    name = "go_default_library",
    srcs = ["embed.go"],
    embed = [":go_proto_library"],
    importpath = "github.com/bazelbuild/rules_go/examples/proto/embed",
    visibility = ["//visibility:public"],
)
