load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")

proto_library(
    name = "my_svc_proto",
    srcs = ["my_svc.proto"],
    deps = [
        "//examples/proto/lib:lib_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "not_grpc",
    proto = ":my_svc_proto",
    importpath = "github.com/bazelbuild/rules_go/examples/proto/grpc/my_svc_proto",
    deps = [
        "//examples/proto/lib:go_default_library",
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
    ],
)

go_grpc_library(
    name = "go_default_library",
    proto = ":my_svc_proto",
    importpath = "github.com/bazelbuild/rules_go/examples/proto/grpc/my_svc_proto",
    deps = [
        "//examples/proto/lib:go_default_library",
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
    ],
)

go_binary(
    name = "test_grpc",
    srcs = ["main.go"],
    deps = [
        ":go_default_library",
        "//examples/proto/lib:go_default_library",
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
